feat(bench): adopt v4 protocol with webtransport browsers